# open-miami

./: CLAUDE.md  Cargo.toml  Makefile  index.html
.github/workflows/: wasm-build.yml
src/: collision.rs  game.rs  graphics.rs  input.rs  lib.rs  main.rs  math.rs  pathfinding.rs  player.rs  render.rs
src/components/: mod.rs
src/ecs/: world.rs
src/systems/: ai.rs  input.rs  movement.rs
tests/e2e/: playwright.config.js
