[package]
name = "open-miami"
version = "0.1.0"
edition = "2021"
authors = ["c4ffein"]
license = "MIT"
description = "An open-source Hotline Miami clone in Rust for the browser"

[dependencies]
macroquad = "0.4"

[patch.crates-io]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
